--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,17 +1,20 @@
 .title {
-  font-weight: 700;
+  font-weight: 550;
+  font-size: 20px;
 }
 
 .list {
-  width: 480px;
+  width: 600px;
   padding-left: 0;
+  padding-top: 20px;
   display: flex;
   justify-content: center;
-  gap: 6px;
+  align-items: center;
+  gap: 10px;
 }
 
 .item {
-  padding: 10px 5px;
-  border: 2px solid black;
+  padding: 15px 8px;
+  border: 2.4px solid black;
   border-radius: 5px;
 }
