--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -2,14 +2,17 @@
   position: relative;
 }
 
-.img {
-  width: 60px;
-  border-radius: 50%;
-  background-color: gray;
+.name {
+  font-weight: 500;
+  font-size: 24px;
+  letter-spacing: 0.07em;
+  padding-top: 10px;
 }
 
-.name {
-  font-weight: 700;
+.red,
+.green {
+  font-size: 14px;
+  letter-spacing: 0.07em;
 }
 
 .red {
@@ -18,25 +21,4 @@
 
 .green {
   color: green;
-}
-
-.blink {
-  animation-name: blink;
-  animation-timing-function: linear;
-  animation-duration: 2.4s;
-  animation-iteration-count: infinite;
-  position: absolute;
-  top: 45px;
-  right: 15px;
-  z-index: 10;
-  color: rgb(3, 255, 3);
-}
-@keyframes blink {
-  50% {
-    opacity: 60%;
-  }
-}
-
-.hidden {
-  display: none;
 }
