--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,5 +1,5 @@
 .usercard {
-  border: 2px solid black;
+  border: 2.4px solid black;
   border-radius: 5px;
   overflow: hidden;
   width: 280px;
@@ -48,6 +48,11 @@
 
 .useritem:not(:first-child) {
   border-left: 2px solid gray;
+}
+
+.subtitle {
+  font-weight: 500;
+  letter-spacing: 0.05em;
 }
 
 .numbers {
